# RasterizationRender

./: CMakeLists.txt  Matrix3f.cpp  Matrix3f.h  README.md  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h  main.cpp
include/: Triangle.h  Vector.h  Vector3f.h  Vector4f.h
src/: Matrix3f.cpp  Triangle.cpp  Vector3f.cpp  Vector4f.cpp  main.cpp
